<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    android:gravity="center_vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="20dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/ivAddAppointment"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_add_button"
            android:contentDescription="@string/description_image1_main" />

        <TextView
            android:id="@+id/tvAddAppointment"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/add_appointment"
            android:textColor="@color/white"
            android:textSize="32sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="20dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/ivSeeAppointments"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_appointments"
            android:contentDescription="@string/description_img2_main" />

        <TextView
            android:id="@+id/tvSeeAppointments"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/see_appointment"
            android:textColor="@color/white"
            android:textSize="32sp"/>
    </LinearLayout>


</LinearLayout>